# wabot

./: .gitignore  index.html  main.css  main.js  pyproject.toml
docs/: index.html
docs/shentzer/: index.html
docs/technion/: index.html
test/: test_MsgEncoder.py  test_SimpleSenderPredictor.py  test_TextEncoder.py  test_data.py  test_parser.py  test_word_embedding.py
wabot/: MsgEncoder.py  Params.py  SimpleSenderPredictor.py  TextEncoder.py  data.py  main.py  parser.py  predict.py  quiz.py  tools.py  train.py
