[tool.poetry]
name = "wabot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.4.0"
tqdm = "^4.62.3"
torch = "^1.10.0"
pytorch-lightning = "^1.5.3"
tensorboard = "^2.7.0"
torchmetrics = "^0.6.0"
optuna = "^2.10.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
doit = "^0.33.1"
pytest-watch = "^4.2.0"
autopep8 = "^1.6.0"
rope = "^0.22.0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
bot-train = "wabot.main:train"
bot-train-hp = "wabot.main:train_hp"
bot-quiz = "wabot.main:quiz"
